--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,7 +10,7 @@ body {
 }
 
 .heading {
-  color: #ff4081; 
+  color: #ffffff; 
   font-size: 2.5em; 
   font-weight: bold; 
   letter-spacing: 1px; 
